<resources>
    <string name="app_name">MoveAndSee</string>
    <string name="title_activity_maps">Move And See</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_create_interest_point">Create a new point of interest</string>
    <string name="menu_create_unknown_point">Create a new unknown point</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="title_create_description">Create a description</string>
    <string name="title_create_interest_point">Create a point of interest</string>
    <string name="title_create_unknown_point">Create a unknown point</string>
    <string name="title_home_connected">Home</string>
    <string name="title_home_not_connected">Log in</string>
    <string name="title_profile">Profile</string>
    <string name="title_registration">Registration</string>
    <string name="select_point">Select a point</string>
    <string name="button_submit">To confirm</string>
    <string name="message_errer_description_no_create">Error creating the description</string>
    <string name="message_description_create">Description created</string>
    <string name="new_interest_point">New interest point</string>
    <string name="press_map_to_create_point">Please press the map to create a point</string>
    <string name="interest_point_create">Point of interest created</string>
    <string name="errer_create_interest_point">Error creating point of interest</string>
    <string name="message_create_unknown_point">Unknown point created</string>
    <string name="message_error_create_unknown_point">Unknown point creation error</string>
    <string name="message_service_unavailable_google_map">Google Map service does not work</string>
    <string name="message_vote_recorded">Recorded vote</string>
    <string name="message_vote_not_recorded">Unsaved vote</string>
    <string name="pseudo">Pseudo</string>
    <string name="mail">Mail</string>
    <string name="button_log_in">Log in</string>
    <string name="button_register">Register</string>
    <string name="mot_de_passe">Password</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="registration_error">The nickname must be between 3 and 12 characters, the password must be at least 8 characters long and the email address must be valid</string>
    <string name="button_registration">Registration</string>
    <string name="username_or_password_fail">Username or Password fail</string>
    <string name="service_not_available">"Service not available "</string>
    <string name="error_login">Error login</string>
    <string name="user_not_find">User not found</string>
    <string name="back_not_available">Back not available</string>
    <string name="interest_point_not_found">Interest point not found</string>
    <string name="description_not_found">Description not found</string>
    <string name="different_passwords">different passwords</string>
    <string name="username">Username :</string>
    <string name="certified">Certified</string>
    <string name="name_certified">"Name certified : "</string>
    <string name="not_certified">Not certified</string>
    <string name="email">"Mail : "</string>
    <string name="not_internet">Not connection internet</string>
    <string name="PseudoError">Le pseudo doit contenir minimum 4 caratères</string>
    <string name="user_not_found">The nickname must contain at least 4 characters</string>
    <string name="errer_unknown">An unexpected error occurred</string>
    <string name="passwordError">Password must contain at least 8 characters</string>
    <string name="emailError">The email is incorrect</string>
    <string name="error_token">An error occurred while saving the token</string>
</resources>
