<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@android:drawable/ic_btn_speak_now"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_interest_point"
        android:title="@string/menu_create_interest_point"
        android:icon="@android:drawable/ic_dialog_dialer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_unknown_point"
        android:title="@string/menu_create_unknown_point"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/menu_sign_out"
        android:icon="@android:drawable/star_off"
        app:showAsAction="never" />

</menu>