<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/pseudo"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pseudo"
        android:layout_alignStart="@+id/pseudo"
        android:layout_below="@+id/pseudo"
        android:layout_centerHorizontal="false"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pseudo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal|center"
        android:text="@string/button_log_in" />

    <Button
        android:id="@+id/toRegistration"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal|center"
        android:text="@string/button_registration" />

</RelativeLayout>